integrate auth-sdk